syntax = "proto3";

package infraboard.mcenter.namespace;
option go_package = "github.com/infraboard/mcenter/apps/namespace";

import "mcube/pb/page/page.proto";
import "mcenter/apps/namespace/pb/namespace.proto";

// Service todo
service RPC {
	rpc QueryNamespace(QueryNamespaceRequest) returns(NamespaceSet);
	rpc DescribeNamespace(DescriptNamespaceRequest) returns(Namespace);
}

// QueryNamespaceRequest 查询应用列表
message QueryNamespaceRequest {
    // 分页请求
    // @gotags: json:"page"
    infraboard.mcube.page.PageRequest page = 1;
    // 域
    // @gotags: json:"domain"
    string domain = 2;
    // 空间的名称
    // @gotags: json:"name"
    repeated string name = 3;
    // 命名空间的id列表
    // @gotags: json:"ids"
    repeated string ids  = 4;
    // 是否查询子空间
    // @gotags: json:"with_sub"
    bool with_sub  = 5;
    // 用户加入的空间
    // @gotags: json:"user_id"
    string user_id  = 6;
}

enum DESCRIBE_BY {
    // 通过名称来获取
    NAME = 0;
    // 通过Id
    ID = 1;
}

// DescriptNamespaceRequest 查询应用详情
message DescriptNamespaceRequest {
    // 获取详情的方式
    // @gotags: json:"describe_by"
    DESCRIBE_BY describe_by =4;
    // 域
    // @gotags: json:"domain"
    string domain = 2;
    // 名称
    // @gotags: json:"name"
    string name = 1;
    // 空间Id
    // @gotags: json:"id"
    string id = 3;
}

// DeleteNamespaceRequest todo
message DeleteNamespaceRequest {
    // 域
    // @gotags: json:"domain"
    string domain = 2;
    // 名称
    // @gotags: json:"name"
    string name = 1;
}